# elyza-grpc-sample

./: .gitignore  README.md  hello.py  pyproject.toml
debug/: debug_client.py
src/: main.py
src/guide/: guide.py
src/proto/: __init__.py  guide.proto  guide_pb2.py  guide_pb2.pyi  guide_pb2_grpc.py
src/server/: __init__.py  servicer.py
